--- a/app/src/main/res/layout/row_trip.xml
+++ b/app/src/main/res/layout/row_trip.xml
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="15dp"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="egate time: 1am"/>
+        android:text="egate time: 1am" />
 
     <TextView
         android:id="@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Location: JBR Bahar 6"/>
+        android:text="Location: JBR Bahar 6" />
 
     <TextView
         android:id="@+id/passengers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="passengers: 1"/>
+        android:text="passengers: 1" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/join_trip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="join trip"
-        />
+        <Button
+            android:id="@+id/join_trip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="join trip" />
 
-    <Button
-        android:id="@+id/chat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="chat"
-        />
+        <Button
+            android:id="@+id/chat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="chat" />
 
     </LinearLayout>
 
